@@ -313,7 +313,8 @@ GuiWriteConsole(char *buf,int len)
     for (p = buf; *p; p++)
 	if (*p == '\001')
 	    *p = EOF;
-    consolewrites(RConsole, buf);
+    if (RConsole) consolewrites(RConsole, buf);
+    else MessageBox(NULL, buf, "Console not found", MB_OK | MB_ICONEXCLAMATION);
 }
 
 /* Rterm write */
@@ -339,7 +340,7 @@ void R_ResetConsole()
 void R_FlushConsole()
 {
     if (CharacterMode == RTerm && R_Interactive) fflush(stdin);
-    else if (CharacterMode == RGui) consoleflush(RConsole);
+    else if (CharacterMode == RGui && RConsole) consoleflush(RConsole);
 }
 
 
@@ -437,6 +438,7 @@ void R_CleanUp(SA_TYPE saveact, int status, int runLast)
 	&& CharacterMode == RTerm)
 	PrintWarnings();
     app_cleanup();
+    RConsole = NULL;
     exit(status);
 }
 
